# react-fastapi

./: README.md
backend/: README.md  crud.py  database.py  main.py  models.py  pyproject.toml  security.py  settings.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: 15904ef6d826_user_table.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  ThemeContext.jsx
frontend/src/components/: Navbar.jsx  SelectList.jsx  UserCard.jsx  UserForm.jsx
frontend/src/constants/: theme.jsx
frontend/src/pages/: Home.jsx  Nodes.jsx  Users.jsx
